src/index.css
@import "tailwindcss";

@layer base {
  :root {
    @apply text-[rgba(207,207,207)] bg-[rgba(7,7,7,1)] font-sans h-full;
  }

  body {
    @apply grid justify-items-center items-end w-full h-full relative mb-20;
  }
}

body::before {
  content: "";
  position: fixed;
  inset: 0;
  z-index: -1;
  opacity: 0.05;
  pointer-events: none;
}

